Version 1.1.2 (?? ??? 2006)
Version 1.1.1 (15 Sep 2006)
  - Fixed the following bug reports on SourceForge:
      1519987: incomplete 'matrix' using week.php for Seamonkey & Firefox
      1559816: QUERY_STRING
      1560666: Current User is showing in pull down menu of
      1560712: date-selection popup-menu not properly adjusted
      1496930: 'userlist' will not be sorted as at your site
      1556705: Missing mailto links on view_entry.php
      1431329: user_search_dn() uses call by ref and too many admins
      1523439: Bug with admins in LDAP
      1523442: Bug (Warning) with pass-by-reference
      1554383: Times next to events during import is wrong
      1555860: SQL Error on import
      1554309: demo calendar event days are not the same
      1553518: events one day early in list_unapproved.php
      1553639: Events missing from the 31st day of month
      1510777: Standardize layout of help pages
      1550117: UAC default settings that don't already exist in DB
      1547474: duplicate code redundancies - js/edit_entry.php
      1545314: duplicate code redundancies - edit_user_handler.php
      1509458: Reminders are coming at the wrong time
      1536288: URL missing folder name
      1512310: Path Truncation in Windows
      1522439: Wrong colors for 'Manage Calendar of'
      1542228: Background for "days with events" color not working
      1543579: typos and other minor glitches - view_entry.php
      1522357: after upgrading 'categories' are enabled
      1541558: Non-users ignore "NONUSER_AT_TOP" during import
      1532286: UAC settings of 'admins' will be overwritten
      1538312: get_my_users() may return incorrect cached data
      1538669: UAC issue with "invite" permissions vs "view"
      1540251: Activity log wrong for imported entries
      1538055: UAC for "Default Configuration" does not show correct values
      1539899: postgres problem
      1538718: Logic typo in 'view_entry.php'